Add API documentation for Fleet Management (#736)
* Update main.yml

Add API documentation for Fleet Management

* Update main.yml

add beta flag

--- a/main.yml
+++ b/main.yml
@@ -387,6 +387,10 @@ drift:
 
 edge:
   title: RHEL for Edge
+  api:
+    versions:
+      - v1
+    isBeta: true
   deployment_repo: https://github.com/RedHatInsights/edge-frontend-build
   source_repo: https://github.com/RedHatInsights/edge-frontend
   top_level: true
