Hide Managed Images link under RHEL Edge
Signed-off-by: Boaz Shuster <boaz.shuster.github@gmail.com>

--- a/main.yml
+++ b/main.yml
@@ -406,6 +406,7 @@ edge:
         title: Fleet Management
         group: fleet-management
       - id: manage-images
+        isHidden: true
         title: Manage images
         group: fleet-management
 
