Add filterbale flag.

--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -5,6 +5,7 @@
         {
             "appId": "applicationServices",
             "title": "Overview",
+            "filterable": false,
             "href": "/application-services/overview"
         },
         {
