revert some changes

--- a/main.yml
+++ b/main.yml
@@ -421,6 +421,7 @@ insights:
       - id: patch
       - id: subscriptions
         section: business
+      - id: ros
       - id: registration
       - id: remediations
   top_level: true
@@ -432,6 +433,7 @@ integrations:
     versions:
       - v1
   frontend:
+    app_base: notifications
     module:
       appName: integrations
       scope: notifications
@@ -505,6 +507,9 @@ notifications:
         title: Red Hat Enterprise Linux
         group: notifications
         default: true
+      - id: openshift
+        title: OpenShift
+        group: notifications
   source_repo: https://github.com/RedHatInsights/notifications-frontend
 
 openshift:
@@ -515,6 +520,11 @@ openshift:
   deployment_repo: https://github.com/RedHatInsights/uhc-portal-frontend-deploy.git
   productId: Red Hat Openshift Cluster Manager
   frontend:
+    module:
+      appName: openshift
+      scope: openshift
+      module: ./RootApp
+      group: openshift
     title: OpenShift Cluster Manager
     paths:
       - /openshift
@@ -546,8 +556,26 @@ openshift:
               title: RHEL Subscriptions
               reload: '../../insights/subscriptions/rhel'
       - id: cost-management
+        section: insights
 
   top_level: true
+
+ocp-advisor: 
+  title: Advisor
+  source_repo: https://github.com/RedHatInsights/ocp-advisor-frontend
+  deployment_repo: https://github.com/RedHatInsights/ocp-advisor-frontend-build
+  frontend:
+    module: ocp-advisor#./RootApp
+    isHidden: true
+    paths:
+      - /openshift/insights/advisor
+    sub_apps:
+      - id: clusters
+        title: Clusters
+        reload: clusters 
+      - id: recommendations
+        title: Recommendations
+        reload: recommendations
 
 patch:
   title: Patch
@@ -572,6 +600,12 @@ patch:
       - id: packages
         title: Packages
   source_repo: https://github.com/RedHatInsights/patchman-ui
+
+playbook-dispatcher:
+  title: Playbook Dispatcher
+  api:
+    versions:
+      - v1
 
 policies:
   title: Policies
@@ -657,6 +691,7 @@ ros:
   frontend:
       module: ros#./RootApp
       section: business
+      title: Resource Optimization
       paths:
           - /insights/ros
   source_repo: https://github.com/RedHatInsights/ros-frontend
