Add notifier setting to nav items.

--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -34,7 +34,8 @@
                 {
                     "appId": "rbac",
                     "title": "Red Hat Access Requests",
-                    "href": "/settings/rbac/access-requests"
+                    "href": "/settings/rbac/access-requests",
+                    "notifier": "chrome.accessRequests.hasUnseen"
                 }
             ]
         },
