--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -9,6 +9,48 @@
             "href": "/application-services/overview"
         },
         {
+            "appId": "applicationServices",
+            "title": "API Management",
+            "href": "/application-services/api-management"
+        },
+        {
+            "appId": "applicationServices",
+            "title": "Connectors",
+            "href": "/application-services/cos"
+        },
+        {
+            "appId": "applicationServices",
+            "title": "Data Science",
+            "href": "/application-services/data-science"
+        },
+        {
+            "appId": "dbaas",
+            "title": "Database Access",
+            "href": "/application-services/databases"
+        },
+        {
+            "appId": "applicationServices",
+            "title": "Service Accounts",
+            "href": "/application-services/service-accounts"
+        },
+        {
+            "title": "Service Registry",
+            "expandable": true,
+            "routes": [
+                {
+                    "appId": "applicationServices",
+                    "title": "Service Registry Instances",
+                    "isBeta": true,
+                    "href": "/application-services/service-registry"
+                },              
+                {
+                    "title": "Documentation",
+                    "isExternal": true,
+                    "href": "https://access.redhat.com/documentation/en-us/red_hat_openshift_service_registry"
+                }
+            ]
+        },
+        {
             "title": "Streams for Apache Kafka",
             "expandable": true,
             "routes": [
@@ -17,12 +59,6 @@
                     "title": "Kafka Instances",
                     "isBeta": true,
                     "href": "/application-services/streams/kafkas"
-                },
-                {
-                    "appId": "applicationServices",
-                    "title": "Service Accounts",
-                    "isBeta": true,
-                    "href": "/application-services/streams/service-accounts"
                 },
                 {
                     "appId": "applicationServices",
@@ -36,31 +72,6 @@
                     "href": "https://access.redhat.com/documentation/en-us/red_hat_openshift_streams_for_apache_kafka"
                 }
             ]
-        },
-        {
-            "appId": "applicationServices",
-            "title": "API Management",
-            "href": "/application-services/api-management"
-        },
-        {
-            "appId": "applicationServices",
-            "title": "Data Science",
-            "href": "/application-services/data-science"
-        },
-        {
-            "appId": "applicationServices",
-            "title": "Connectors",
-            "href": "/application-services/cos"
-        },
-        {
-            "appId": "applicationServices",
-            "title": "Service Registry",
-            "href": "/application-services/service-registry"
-        },
-        {
-            "appId": "dbaas",
-            "title": "Database Access",
-            "href": "/application-services/databases"
         }
     ]
 }
