Add data access application.

--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -56,6 +56,11 @@
             "appId": "applicationServices",
             "title": "Service Registry",
             "href": "/application-services/service-registry"
+        },
+        {
+            "appId": "dbaas",
+            "title": "Database Access",
+            "href": "/application-services/databases"
         }
     ]
 }
