MGDSTRM-5075: Updated left nav for App Services bundle on console.redhat.com (#894)
* MGDSTRM-5075:updated left nav for App Services bundle on console.redhat.com

Signed-off-by: Srijita Mukherjee <srmukher@redhat.com>

* Updated main.yml service registry sub apps

Signed-off-by: Srijita Mukherjee <srmukher@redhat.com>

--- a/main.yml
+++ b/main.yml
@@ -636,6 +636,9 @@ openshift:
       - id: releases
         title: Releases
         group: openshift
+      - id: downloads
+        title: Downloads
+        group: openshift
       - id: ocp-advisor
         group: insights
       - id: subscriptions
@@ -701,13 +704,21 @@ streams:
       - id: kafkas
         title: "Kafka Instances"
         default: true
-      - id: service-accounts
-        title: "Service Accounts"
       - id: resources
         title: "Resources"
       - id: streams-docs
         title: Documentation
         navigate: https://access.redhat.com/documentation/en-us/red_hat_openshift_streams_for_apache_kafka/
+
+service-registry:
+  title: "Service Registry"
+  frontend:
+    sub_apps:
+      - id: instances
+        title: "Service Registry Instances"
+      - id: streams-docs
+        title: Documentation
+        navigate: https://access.redhat.com/documentation/en-us/red_hat_openshift_service_registry
 
 application-services:
   title: Application Services
@@ -724,19 +735,22 @@ application-services:
         title: "Overview"
         default: true
         group: overview
-      - id: streams
-        group: overview
       - id: api-management
         title: "API Management"
-        group: overview
-      - id: data-science
-        title: "Data Science"
         group: overview
       - id: cos
         title: "Connectors"
         group: overview
+      - id: data-science
+        title: "Data Science"
+        group: overview
+      - id: service-accounts
+        title: "Service Accounts"
+        group: overview
       - id: service-registry
         title: "Service Registry"
+        group: overview
+      - id: streams
         group: overview
   top_level: true
   source_repo: https://github.com/bf2fc6cc711aee1a0c2a/mk-ui-host
