Add Resources Tab under Service Registry
Signed-off-by: Srijita Mukherjee <srmukher@redhat.com>

--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -42,6 +42,12 @@
                     "title": "Service Registry Instances",
                     "isBeta": true,
                     "href": "/application-services/service-registry"
+                },
+                {
+                    "appId": "applicationServices",
+                    "title": "Resources",
+                    "isBeta": true,
+                    "href": "/application-services/service-registry/resources"
                 },              
                 {
                     "title": "Documentation",
