--- a/main.yml
+++ b/main.yml
@@ -716,6 +716,8 @@ service-registry:
     sub_apps:
       - id: instances
         title: "Service Registry Instances"
+      - id: service-registry
+        title: "Service Registry"
       - id: streams-docs
         title: Documentation
         navigate: https://access.redhat.com/documentation/en-us/red_hat_openshift_service_registry
