--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -46,6 +46,11 @@
             "appId": "applicationServices",
             "title": "Data Science",
             "href": "/application-services/data-science"
+        },
+        {
+            "appId": "dbaas",
+            "title": "Database Access",
+            "href": "/application-services/databases"
         }
     ]
 } 
