--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -51,6 +51,16 @@
                     "appId": "notifications",
                     "title": "Red Hat Enterprise Linux",
                     "href": "/settings/notifications/rhel"
+                },
+                {
+                    "appId": "notifications",
+                    "title": "OpenShift",
+                    "href": "/settings/notifications/openshift"
+                },
+                {
+                    "appId": "notifications",
+                    "title": "Application Services",
+                    "href": "/settings/notifications/application-services"
                 }
             ]
         },
