NOTIF-318 Adding application services to ci-stable

--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -56,6 +56,11 @@
                     "appId": "notifications",
                     "title": "OpenShift",
                     "href": "/settings/notifications/openshift"
+                },
+                {
+                    "appId": "notifications",
+                    "title": "Application Services",
+                    "href": "/settings/notifications/application-services"
                 }
             ]
         },
