added entry in settings navigation for edge / fleet management app

--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -112,6 +112,11 @@
                             ]
                         }
                     ]
+                },
+                {
+                    "appId": "applications",
+                    "title": "Fleet Management",
+                    "href": "/settings/applications/edge"
                 }
             ]
         },
