update to isEntitled

--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -80,10 +80,10 @@
             "expandable": true,
             "permissions": [
                 {
-                    "method": "isOrgAdmin",
-                    "apps": [
-                        "cost-management",
-                        "insights"
+                    "method": "isEntitled",
+                    "args": [
+                        "insights",
+                        "cost-management"
                     ]
                 }
             ],
