--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -83,7 +83,7 @@
                     "method": "isEntitled",
                     "args": [
                         "insights",
-                        "cost-management"
+                        "cost_management"
                     ]
                 }
             ],
