--- a/main.yml
+++ b/main.yml
@@ -549,6 +549,12 @@ malware:
         title: Systems
   source_repo: https://github.com/RedHatInsights/malware-detection-frontend
 
+subscription-inventory:
+  title: Subscription Inventory
+  channel: '#subscription-inventory'
+  deployment_repo: https://github.com/RedHatInsights/subscription-inventory-ui-build
+  source_repo: https://github.com/RedHatInsights/subscription-inventory-ui
+
 manifests:
   title: Manifests
   channel: '#subscription-central'
