--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -1,41 +1,13 @@
+
 {
     "id": "application-services",
-    "title": "Application services",
+    "title": "Application Services",
     "navItems": [
         {
             "appId": "applicationServices",
             "title": "Overview",
             "filterable": false,
             "href": "/application-services/overview"
-        },
-        {
-            "title": "Streams for Apache Kafka",
-            "expandable": true,
-            "routes": [
-                {
-                    "appId": "streams",
-                    "title": "Kafka Instances",
-                    "isBeta": true,
-                    "href": "/application-services/streams/kafkas"
-                },
-                {
-                    "appId": "streams",
-                    "title": "Service Accounts",
-                    "isBeta": true,
-                    "href": "/application-services/streams/service-accounts"
-                },
-                {
-                    "appId": "streams",
-                    "title": "Resources",
-                    "isBeta": true,
-                    "href": "/application-services/streams/resources"
-                },
-                {
-                    "title": "Documentation",
-                    "isExternal": true,
-                    "href": "https://access.redhat.com/documentation/en-us/red_hat_openshift_streams_for_apache_kafka"
-                }
-            ]
         },
         {
             "appId": "applicationServices",
@@ -46,6 +18,52 @@
             "appId": "applicationServices",
             "title": "Data Science",
             "href": "/application-services/data-science"
+        },
+        {
+            "appId": "applicationServices",
+            "title": "Service Accounts",
+            "href": "/application-services/service-accounts",
+            "isBeta": true
+        },
+        {
+            "title": "Service Registry",
+            "expandable": true,
+            "routes": [
+                {
+                    "appId": "applicationServices",
+                    "title": "Service Registry Instances",
+                    "isBeta": true,
+                    "href": "/application-services/service-registry"
+                },
+                {
+                    "title": "Documentation",
+                    "isExternal": true,
+                    "href": "https://access.redhat.com/documentation/en-us/red_hat_openshift_service_registry"
+                }
+            ]
+        },
+        {
+            "title": "Streams for Apache Kafka",
+            "expandable": true,
+            "routes": [
+                {
+                    "appId": "applicationServices",
+                    "title": "Kafka Instances",
+                    "isBeta": true,
+                    "href": "/application-services/streams/kafkas"
+                },
+                {
+                    "title": "Documentation",
+                    "isExternal": true,
+                    "href": "https://access.redhat.com/documentation/en-us/red_hat_openshift_streams_for_apache_kafka"
+                }
+            ]
+        },
+        {
+            "appId": "applicationServices",
+            "title": "Learning Resources",
+            "href": "/application-services/learning-resources",
+            "isBeta": true
         }
     ]
 }
