--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,5 @@
 # Karel and Ryan have full control of the repo by default
-*                       @karelhala @ryelo
+*                       @karelhala @ryelo @hyperkid123
 
 # Keith may also want to be aware of changes made to the Akamai scripts and Jenkinsfile
 /akamai/*               @karelhala @ryelo @coderbydesign
