[prod-stable] Add DBaaS application, merge on TBD (#915)

--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -57,7 +57,11 @@
             ]
         },
         {
-            "appId": "applicationServices",
+            "appId": "dbaas",
+            "title": "Database Access",
+            "href": "/application-services/databases"
+        },
+        {
             "title": "Learning Resources",
             "href": "/application-services/learning-resources"
         }
