Add missing appId to app servvices nav.

--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -62,6 +62,7 @@
             "href": "/application-services/databases"
         },
         {
+            "appId": "applicationServices",
             "title": "Learning Resources",
             "href": "/application-services/learning-resources"
         }
