Add subscriptions->streams to application-services

--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -68,6 +68,24 @@
             ]
         },
         {
+            "groupId": "insights",
+            "title": "Insights",
+            "navItems": [
+                {
+                    "title": "Subscriptions",
+                    "expandable": true,
+                    "routes": [
+                        {
+                            "appId": "applicationServices",
+                            "title": "Streams for Apache Kafka",
+                            "isBeta": true,
+                            "href": "/application-services/subscriptions/streams"
+                        }
+                    ]
+                }
+            ]
+        },
+        {
             "appId": "applicationServices",
             "title": "Learning Resources",
             "href": "/application-services/learning-resources"
