chore: add dbz-ui (#959)
* add debz ui

* Removing the navigation part

--- a/main.yml
+++ b/main.yml
@@ -786,6 +786,10 @@ cos-ui-build:
   title: UI for COS
   deployment_repo: https://github.com/RedHatInsights/cos-ui-build
 
+dbz-ui-build:
+  title: UI for Debezium
+  deployment_repo: https://github.com/RedHatInsights/dbz-ui-build
+
 sr-ui-build:
   title: UI for Service Registry
   deployment_repo: https://github.com/RedHatInsights/sr-ui-build
