--- a/main.yml
+++ b/main.yml
@@ -726,7 +726,15 @@ rhosak-control-plane-ui-build:
 rhoas-guides-build:
   title: Guides for RHOAS
   deployment_repo: https://github.com/RedHatInsights/rhoas-guides-build
-  
+
+cos-ui-build:
+  title: UI for COS
+  deployment_repo: https://github.com/RedHatInsights/cos-ui-build
+
+dbz-ui-build:
+  title: UI for Debezium
+  deployment_repo: https://github.com/RedHatInsights/dbz-ui-build
+
 sr-ui-build:
   title: Service Registry data plane UI
   deployment_repo: https://github.com/RedHatInsights/sr-ui-build
