Add trending icon

--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -69,6 +69,7 @@
         },
         {
             "groupId": "insights",
+            "icon": "trend-up",
             "title": "Insights",
             "navItems": [
                 {
