NOTIF-398 This should also be needed

--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -67,6 +67,11 @@
                     "appId": "notifications",
                     "title": "Application Services",
                     "href": "/settings/notifications/application-services"
+                },
+                {
+                    "appId": "ansible",
+                    "title": "Ansible",
+                    "href": "/settings/notifications/ansible"
                 }
             ]
         },
