Draft: Add insights-operator-gathering-conditions-service reference

--- a/main.yml
+++ b/main.yml
@@ -219,6 +219,13 @@ ccx:
       - v1
     apiName: insights-results-aggregator
 
+ccx-insights-operator-gathering-conditions-service:
+  title: Insights Operator Gathering Conditions Service
+  api:
+    versions:
+      - v1
+    apiName: insights-operator-gathering-conditions-service
+
 chrome:
   channel: '#flip-mode-squad'
   deployment_repo: https://github.com/RedHatInsights/insights-chrome-build
