--- a/main.yml
+++ b/main.yml
@@ -255,12 +255,12 @@ ccx:
   title: OpenShift Insights
   api:
     subItems:
-      insights_operator_aggregator:
+      aggregator:
         title: Insights Results Aggregator
         versions:
           - v1
         apiName: insights-results-aggregator
-      insights_operator_gathering_conditions_service:
+      gatheringconditions:
         title: Insights Operator Gathering Conditions Service
         versions:
           - v1
