NOTIF-459 Add Console bundle in the menu on stage

--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -72,6 +72,11 @@
                     "appId": "ansible",
                     "title": "Ansible",
                     "href": "/settings/notifications/ansible"
+                },
+                {
+                    "appId": "console",
+                    "title": "Console",
+                    "href": "/settings/notifications/console"
                 }
             ]
         },
