NOTIF-459 Add Console bundle in the menu on stage

--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -61,6 +61,11 @@
                     "appId": "notifications",
                     "title": "Application Services",
                     "href": "/settings/notifications/application-services"
+                },
+                {
+                    "appId": "console",
+                    "title": "Console",
+                    "href": "/settings/notifications/console"
                 }
             ]
         },
