--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -15,6 +15,11 @@
         },
         {
             "appId": "applicationServices",
+            "title": "Connectors",
+            "href": "/application-services/connectors"
+        },
+        {
+            "appId": "applicationServices",
             "title": "Data Science",
             "href": "/application-services/data-science"
         },
