--- a/main.yml
+++ b/main.yml
@@ -783,6 +783,9 @@ application-services:
       - id: service-registry
         title: "Service Registry"
         group: overview
+      - id: smart-events
+        title: "Smart Events"
+        group: overview
       - id: streams
         group: overview
       - id: learning-resources
@@ -817,6 +820,10 @@ sr-ui-build:
 srs-ui-build:
   title: UI for Service Registry Control Plane
   deployment_repo: https://github.com/RedHatInsights/srs-ui-build
+
+se-ui-build:
+  title: UI for Smart Events
+  deployment_repo: https://github.com/RedHatInsights/se-ui-build
 
 rhoas-guides-build:
   title: Guides for RHOAS
